objects/Account_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>This will filter out the account for which we need to force the account assignment rule.</description>
        <label>Account Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                    <default>true</default>
                    <label>Mid Market</label>
                </value>
                <value>
                    <fullName>Enterprise Solutions</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Account Queues</relationshipLabel>
        <relationshipName>Account_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Member_Active__c</fullName>
        <description>This field will ensure whether the member is active or not.</description>
        <formula>Member__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Member Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Queue_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field will ensure that this record can be used for account assignment rule.</description>
        <label>Is Queue Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Account_Assigned__c</fullName>
        <description>This field will be updated with current date/time when the member of current record assigned as the owner of any record.</description>
        <label>Last Account Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>This field will hep us to match to account for Account assignment.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>Dublin</fullName>
                </value>
                <value>
                    <fullName>Fort Worth</fullName>
                </value>
                <value>
                    <fullName>Frankfurt</fullName>
                </value>
                <value>
                    <fullName>Guangzhou</fullName>
                </value>
                <value>
                    <fullName>Hamburg</fullName>
                </value>
                <value>
                    <fullName>Herzliya</fullName>
                </value>
                <value>
                    <fullName>Ho Chi Minh City</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <formula>Member__r.Id</formula>
        <label>Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup of the user and will be used in account assignment use case as an owner.</description>
        <label>Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Account Queues</relationshipLabel>
        <relationshipName>Account_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Shows the region of related portfolio</description>
        <formula>Portfolio__r.TerritoryID__r.RegionID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the region of related portfolio</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Sales Lead</fullName>
                </value>
                <value>
                    <fullName>Pod Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Shows the territory of related portfolio.</description>
        <formula>Portfolio__r.TerritoryID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the territory of related portfolio.</inlineHelpText>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <description>This object will be used in Account assignment use case.</description>
    <label>Account Queue</label>
    <nameField>
        <displayFormat>Queue-{00000}</displayFormat>
        <label>Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Teams</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Territory__c</columns>
        <columns>Region__c</columns>
        <columns>Account_Record_Type__c</columns>
        <columns>Member__c</columns>
        <columns>Role__c</columns>
        <columns>Is_Queue_Active__c</columns>
        <columns>Is_Member_Active__c</columns>
        <columns>Last_Account_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portfolio__c</field>
            <operation>equals</operation>
            <value>Berlin</value>
        </filters>
        <filters>
            <field>Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Mid Market</value>
        </filters>
        <label>All Teams</label>
    </listViews>
    <listViews>
        <fullName>All_Teams_w_Portfolios</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Account_Record_Type__c</columns>
        <columns>Member__c</columns>
        <columns>Is_Queue_Active__c</columns>
        <columns>Is_Member_Active__c</columns>
        <columns>Last_Account_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portfolio__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Teams w/Portfolios</label>
    </listViews>
    <listViews>
        <fullName>Enterprise_Account_Queues</fullName>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Member__c</columns>
        <columns>Is_Queue_Active__c</columns>
        <columns>Account_Record_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Is_Member_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Enterprise Solutions</value>
        </filters>
        <filters>
            <field>Is_Queue_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Enterprise Account Queues</label>
        <sharedTo>
            <group>Growth_Ops_Enterprise</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RR_Account_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Account_Record_Type__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Member__c</columns>
        <columns>Last_Account_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Member_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_Queue_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>RR Account Assignment</label>
    </listViews>
    <validationRules>
        <fullName>Member_and_Market_required</fullName>
        <active>true</active>
        <description>Without Portfolio and Member you are not supposed to create records.</description>
        <errorConditionFormula>OR( ISBLANK(Portfolio__c), LEN( Member__c ) = 0 )</errorConditionFormula>
        <errorMessage>Without Portfolio and Member you are not supposed to create records.</errorMessage>
    </validationRules>
</CustomObject>